public/make-me-pretty/styles.css
/* ... */
#display-more-i-am-button {
    width: 140px;
    height: 1.5em;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
}

#display-more-i-am-button p {
    /* text-align: center; */
    margin: 0;
    padding: 0;
}

#show-more-row {
    /* display: flex; */
    /* justify-content: center; */
    align-items: center;
    margin-top: 2em;
    margin-bottom: 5em;
}

#show-more-row-text {
    margin-right: 2em;
}
/* #add-provider-submit {
    display: none;
} */


    /* fix this later */
  .tooltip .tooltiptext {
    visibility: hidden;
    /* width: 300px; */
    color: rgb(9, 61, 85);
    text-align: center;
    border-radius: 6px;
    padding: 11px 0 0 4px;
    position: absolute;
    z-index: 1;
    font-weight: normal
  }
  
  .tooltip:hover .tooltiptext {
    visibility: visible;
  }

/* hidden checkboxed who added infp */

#client-added-info-check, #provider-added-info-check {
    display: none;
}


/* this is the entire form, both versions */
.add-provider-form {
    margin: 5vw;
}  

/* this is the entire client form version - UNCOMMENT */
.client-add-provider {
    display: none;
}


/* this is the entire provider form version*/
.provider-add-provider {
    display: none;
}







.client-rating{
    /* display:none; */
    margin: 5em 0em;
}


.radio-div, .radio-label-div, .radio-label-div-admin-add {
    display: flex;
    justify-content: space-between;
} 

.radio-label-div, .radio-label-div-admin-add {
    margin-left: .4em;
    margin-right: .22em;
    margin-top: 1em;
} 

.client-rating p {
    font-size: .7em;
    width: 28vw;
}

.rating-explain {
    display: flex;
    justify-content: space-between;
    
}

/* for radio button alignment */
.indent-me {
    margin: 0vw 6vw;
}

input[type='radio'] { 
    transform: scale(2.5); 
}

input[type='radio']:checked:after { 
        width: 12px;
        height: 12px;
        border-radius: 12px;
        top: -2px;
        left: -1px;
        position: relative;
        /* background-color: #ffa500; */
        /* background-image: linear-gradient(to right,  #50a3e0, #3bb0e3, #26c0e3, #2fdcf3);     */
        content: '';
        background-image: linear-gradient(to right,  #758edd, #50a3e0, #3bb0e3,  #26c0e3, #2fdcf3, #a1e7a1); 
        display: inline-block;
        visibility: visible;
        border: 2px solid white; 
 
}


.radio-yn-div, .radio-yn-label-div, .radio-ynu-label-div, .radio-ynu-div {
    display: flex;
    justify-content: space-around;
}

.yes3 {
    padding-left: 23px;
}

.no3{
    padding-left: 50px;
}

.unknown3{
    padding-left: 35px;
}

.radio-yn-label-div, .radio-ynu-label-div {
    margin-top: 1em;
}

.question {
    margin: 5em 0em;
}

.radio-yn-div, .radio-ynu-div, .radio-div {
    margin-top: 2em;
}


input[type=text] {
    width: 100%;
    padding: 12px 20px;
    display: inline-block;
    box-sizing: border-box;
    margin-top: 20px;
  }

input[type=checkbox] {
    /* width: 5em; */
    /* padding: 5em; */
    transform: scale(2);
    margin: 1em;
}


.text1 {
    font-weight: 600;
}

.question textarea, .client-rating textarea {
    margin-top: 20px;
}

.insurance-check-row {
    display: flex;
}

.insurance-check-row label {
    padding-top: .6em;
}

#who-are-you-2 {
    display: none;
}

#poly_rating, #queer_rating, #trans_rating, #kink_rating, #sw_rating, #bipoc_rating, #additional_rating {
    display: none;
}

#adhd_rating, #autism_rating, #disability_rating, #trauma_rating, #substance_use_rating {
    display: none;
}

.thank-you-add {
    display: none;
}

.reset-form-button {
    background-image: linear-gradient(to right,  #758edd, #50a3e0, #3bb0e3,  #26c0e3, #2fdcf3, #a1e7a1); 
    padding: 5px 10px;
    border-radius: 17px;
    border: 1px solid mediumaquamarine;
    margin-top: 2em;
}



.reset-form-button:hover {
border: 1px solid black;
font-weight: bold;
}


/* ADMIN ADD A PROVIDER */

/* do i need this still */
.admin-add-client-rating{
    /* display:none; */
    margin: 5em 0em;
}

/* do i need this still */
.admin-add-client-rating p {
    font-size: .7em;
    width: 28vw;
}

.radio-table {
    width: 100%;
    margin-top: 1.5em;
}

.radio-table td {
    width: 75px;
    text-align: center; 
    vertical-align: middle;
    
}

.rating-explain-2 {
    font-size: .8em;
}








/* UPDATE PAGE STYLINGS */

.update-container {
    margin: 0 5vw;
}

.update-form {
    margin: 5vw 5vw 0 5vw;
}

#update-delete-div {
    margin-top: 0;
}

th {
    padding-bottom: 1em;
    padding-left: 0
}

td {
    padding:.5em 0;
}

.provider-link-update {
    text-decoration: none;
    color:rgb(9, 61, 85)
}

.provider-link-update:hover {
    font-weight: bold;
}

/* Update and Add to the List (Add a Provider) Styling */

/* .who-are-you-2 {} */

.show-insurance-button {
    font-size: .7em;
    margin-top: 2.2em;
    margin-bottom: 1em;
    background-image: linear-gradient(to right,  #758edd, #50a3e0, #3bb0e3,  #26c0e3, #2fdcf3, #a1e7a1); 
    border: 1px solid mediumaquamarine;
    border-radius: 17px;
    font-size: .8em;
}

.show-insurance-button p {
    margin: 0;
    padding: 5px 10px;
}


.show-insurance-button:hover {
    border: 2px solid black;
    font-weight: bold;
}

.insurance-box {
    display: none;
    margin-top: 1.6em;
    flex-direction: column;
}


/* RESULTS */

.result-explain {
    max-width: 900px;
    margin: 10vh 10vw;
    
}

#show-more-info-button {
    margin: 1em;
}

/* #show-more-provider-info {
    background-color: aqua;
    display: none;
} */

.gradient-checkbox {
    width: 20px;
}

.results-box {
    margin: 5vw;
    padding: 5vw;
    /* border: 5px lavender solid; */
    border: 5px #d0ecd0 solid;
}
/* ... */

